[tool.poetry]
name = "stocksync"
version = "0.1.0"
description = "Webhook server for eBay Marketplace Deletion notification"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
